Fix footer list alignment

--- a/resources/css/footer-list.css
+++ b/resources/css/footer-list.css
@@ -4,7 +4,7 @@
   }
   &__link {
     color: white;
-    padding: 0 10px;
+    padding-right: 10px;
     text-decoration: none;
   }
 }
