--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -14,4 +14,8 @@
     float: left;
     width: 50%;
   }
+
+  &__nav-footer-list{
+    float: right;
+  }
 }
